web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-catch-dbl-let/output.txt
[SyntaxError]: Identifier has already been declared. (1,36)
1|let foo; try {} catch (foo) {} let foo;
 |                                  ^
